[Fix] Contrast colors
Change the old main color to " #8A3143 " who have a better contrast with white font.

--- a/style.css
+++ b/style.css
@@ -19,14 +19,13 @@ body {
     color: #FFF;
 }
 
+.marge {
+    margin: 5px;
+}
 
-
-
-
-
-
-
-
+.shadow {
+    box-shadow: -1px 8px 5px -4px rgba(0,0,0,0.49);
+}
 
 a,
 button {
@@ -154,7 +153,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: white;
 }
 
 .d-bloc .a-btn:hover,
@@ -171,7 +170,7 @@ a:hover {
 .d-bloc h5 a:hover,
 .d-bloc h6 a:hover,
 .d-bloc p a:hover {
-    color: rgba(255, 255, 255, 1);
+    color: rgba(255, 255, 255, .6);
 }
 
 .d-bloc .navbar-toggle .icon-bar {
@@ -698,7 +697,7 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 20px;
 }
 
 .tight-width-whitespace {
@@ -792,7 +791,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #8A3143; 
 }
 
 .tc-white {
@@ -800,12 +799,12 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #8A3143;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
+    background: #B85558!important;
     color: #FFFFFF!important;
 }
 
